...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/white"
...
