...
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputCpf"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:inputType="number"
            android:maxLength="11"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
...
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputData"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
...
